# parallel-corpus-py

./: .bumpversion.toml  .pre-commit-config.yaml  .sourcery.yaml  CHANGELOG.md  Makefile  README.md  cliff.toml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: check.yml  release.yml  scheduled.yml  test.yml
src/graph/: graph.py  rich_diff.py  shared.py  token.py
src/graph/shared/: __init__.py  diffs.py  lists.py  ranges.py  str_map.py  union_find.py  unique_check.py
src/parallel_corpus/: __init__.py  graph.py  source_target.py  text_token.py  token.py
src/parallel_corpus/shared/: __init__.py  dicts.py  diffs.py  functional.py  ids.py  lists.py  ranges.py  str_map.py  union_find.py  unique_check.py
tests/: requirements-testing.in  test_graph.py  test_rich_diff.py  test_token.py
tests/__snapshots__/: test_graph.ambr  test_token.ambr
tests/test_shared/: test_diffs.py  test_functional.py  test_ids.py  test_init.py  test_lists.py  test_ranges.py  test_union_find.py
tests/test_shared/__snapshots__/: test_ranges.ambr
